updated gh pages

--- a/index.html
+++ b/index.html
@@ -38,13 +38,8 @@
 <li class="nav-item">
   <a class="nav-link" href="reference/index.html">Reference</a>
 </li>
-<li class="nav-item dropdown">
-  <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" id="dropdown-articles">Articles</a>
-  <div class="dropdown-menu" aria-labelledby="dropdown-articles">
-    <a class="dropdown-item" href="articles/malbacR_vignette_condensed_filtered.html">malbacR: A Vignette Pertaining to Pre-Filtered Data</a>
-    <a class="dropdown-item" href="articles/malbacR_vignette_expanded_unfiltered.html">malbacR: A Vignette Pertaining to Unfiltered Data</a>
-    <a class="dropdown-item" href="articles/malbacR_vignette_rank_becas.html">malbacR: A Vignette Pertaining to Ranking BECAS</a>
-  </div>
+<li class="nav-item">
+  <a class="nav-link" href="articles/index.html">Articles</a>
 </li>
       </ul>
 <form class="form-inline my-2 my-lg-0" role="search">
@@ -61,7 +56,7 @@
   <main id="main" class="col-md-9"><div class="section level1">
 <div class="page-header"><h1 id="malbacr">malbacR<a class="anchor" aria-label="anchor" href="#malbacr"></a>
 </h1></div>
-<p>This R package provides functionality for batch correction methods for mass spectrometry (MS) omics data. This includes Pareto Scaling, Power Scaling, Range Scaling, ComBat, EigenMS, RUV-random, NOMIS, QC-RLSC, QC-RFSC, WaveICA2.0, SERRF, and TIGER. Additional functions include an imputation function (using expectation maximization algorithms) and a function to filter data for TIGER batch correction. Example data is also provided in the package.</p>
+<p>This R package provides functionality for batch correction methods for mass spectrometry (MS) omics data. This includes Pareto Scaling, Power Scaling, Range Scaling, ComBat, EigenMS, RUV-random, NOMIS, QC-RLSC, WaveICA2.0, SERRF, and TIGER). Additional functions include an imputation function (using expectation maximization algorithms) and a function to filter data for TIGER batch correction. Example data is also provided in the package.</p>
 <div class="section level2">
 <h2 id="installation">Installation:<a class="anchor" aria-label="anchor" href="#installation"></a>
 </h2>
